Fix Difficulty Button Functionality on Small Devices

--- a/src/assets/styles/utilities.css
+++ b/src/assets/styles/utilities.css
@@ -15,7 +15,7 @@ h2 {
 }
 
 h3 {
-  font-size: clamp(1.3rem, 1.5vw, 4rem);
+  font-size: clamp(1.2rem, 1.5vw, 4rem);
 }
 
 p {
